# http-cpp

./: .gitignore  .travis.yml  CMakeConfigCompilers.cmake  CMakeLists.txt  README.md  appveyor.yml  config-VS2012-win64.bat  config-VS2015-win64.bat  config-win64.bat  http-cpp.vcxproj  http-cpp.vcxproj.filters
Docs/: docs.doxygen
http-cpp/: CMakeLists.txt  client.cpp  client.hpp  error_code.cpp  error_code.hpp  form_data.hpp  http-cpp.cpp  http-cpp.hpp  message.hpp  operation.cpp  operation.hpp  post_data.hpp  progress.hpp  progress_info.hpp  request.hpp  requests.cpp  requests.hpp  resource.rc  response.hpp  responses.cpp  responses.hpp  status.cpp  status.hpp  utils.cpp  utils.hpp
http-cpp/aws_s3/: client.cpp  client.hpp
http-cpp/impl/: curl_easy_wrap.hpp  curl_global_init_wrap.hpp  curl_multi_wrap.hpp  curl_share_wrap.hpp
http-cpp/oauth1/: client.cpp  client.hpp  client_oauth1.cpp  utils.cpp  utils.hpp  utils_oauth1.cpp
http-cpp/oauth1/impl/: HMAC_SHA1.h
test/: CMakeLists.txt  aws_s3_unittests.cpp  client_unittests.cpp  encode_unittests.cpp  http-cpp_unittests.cpp  http_unittests.cpp  main.cpp  oauth1_unittests.cpp  start_node_server.cpp  start_node_server.hpp
test/server/: index.js  request_handlers.js  router.js  server.js
